Fix AntTabs menu position to fixed position with auto scroller
Align 'category', 'All Products, buttons inside a div

customize product list scrollbar

display 'category', 'All Products, buttons inside a div
only for the Product tab

--- a/src/components/TabPanel/ProductTabContent.module.css
+++ b/src/components/TabPanel/ProductTabContent.module.css
@@ -9,10 +9,38 @@
     background-color: #F0FFFF;
 }
 
+/* ::-webkit-scrollbar': {
+    width: '5px',
+},
+'&::-webkit-scrollbar-thumb': {
+background: '#39ff14',
+borderRadius: '10px',
+},
+'&::-webkit-scrollbar-thumb:hover': {
+background: '#00ffff', 
+}, */
 
 .divScroller{
     float:right;
     width:100%;
     max-height: 550vh;
-    overflow-y: auto;
+    overflow: auto;
+    overflow-x: hidden;
+}
+
+
+
+
+.divScroller::-webkit-scrollbar{
+    width: 5px;
+}
+
+.divScroller::-webkit-scrollbar-thumb{
+    background:grey;
+    border-radius: 10px;
+}
+
+.divScroller::-webkit-scrollbar-thumb:hover {
+    /* background: #00ffff;  */
+    background: #39ff14;
 }
